--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Applied MSc in Data Analytics</h4>
-              <h5>2022 - 2023</h5>
+              <h5>Oct 2022 - Dec 2023</h5>
               <p><em>Data Scient Tech Institute</em></p>
               <p>Work-study program with a focus on techniques and tools needed to conduct 
                 relevant and structured data analysis. Classes included SQL, 
@@ -287,7 +287,7 @@
 
             <div class="resume-item">
               <h4>Bachelor's Degree in Data Analytics</h4>
-              <h5>2021 - 2022</h5>
+              <h5>oct 2021 - oct 2022</h5>
               <p><em>ENSAE Engineering School &amp; Openclassrooms </em></p>
               <p>Project-oriented program that emphasized the practical application of data 
                 analysis skills. Successfully completed ten projects inspired by real-world 
@@ -314,7 +314,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Data Analyst</h4>
-              <h5>2022 - 2023</h5>
+              <h5>Oct 2022 - Present</h5>
               <p><em>Vulog, Nice, FR</em></p>
               <p>
               <ul>
