--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                             </div>
                         </div>
                         <h4><a href="https://github.com/misszeferino/SQL-Projects/blob/1ac00bdce4409b5887f2e9cb62fd2b23f67908ff/Project_2_Battery_Alert_System_for_Electric_Vehicles.md" target="_blank">Battery Alert System</a> <span class="text-uppercase margin-l-20 portfolio_pill">SQL</span></h4>
-                        <p>Identify vehicles with insufficient battery to return to the starting point of their trip</p>
+                        <p>Identify vehicles with insufficient battery to return to the starting point of their trip.</p>
                         <a class="link" href="https://github.com/misszeferino/SQL-Projects/blob/1ac00bdce4409b5887f2e9cb62fd2b23f67908ff/Project_2_Battery_Alert_System_for_Electric_Vehicles.md" target="_blank">Read More</a>
                     </div>
                     <!-- End Latest Products -->
@@ -353,8 +353,34 @@
                             </div>
                         </div>
                         <h4><a href="https://github.com/misszeferino/SQL-Projects/blob/f2e9ef93723779531cd58160f2e9f33c135f2c04/Project_4_Analyse_des_ventes_immobili%C3%A8res.md" target="_blank">Real Estate Sales Analysis</a> <span class="text-uppercase margin-l-20 portfolio_pill">SQL</span></h4>
-                        <p>This project focuses on analyzing real estate sales across France .</p>
+                        <p>This project focuses on analyzing real estate sales across France.</p>
                         <a class="link" href="https://github.com/misszeferino/SQL-Projects/blob/f2e9ef93723779531cd58160f2e9f33c135f2c04/Project_4_Analyse_des_ventes_immobili%C3%A8res.md" target="_blank">Read More</a>
+                    </div>
+                    <!-- End Latest Products -->
+
+                    <!-- Latest Products -->
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <div class="margin-b-20">
+                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                                <img class="img-responsive" src="img/portfolio/power-bi-1.png" alt="Latest Products Image" />
+                            </div>
+                        </div>
+                        <h4><a href="https://github.com/misszeferino/Power-BI-Projects/blob/64fa7c3b7773075f9cbec0ab7ff6e99407798b46/Project_1_%20Performance_des_Appels%20_Analyse_Financi%C3%A8re.md" target="_blank">Call Center Analysis</a> <span class="text-uppercase margin-l-20 portfolio_pill">Power BI</span></h4>
+                        <p>A Power BI dashboard that provides a comprehensive analysis of a call center's performance.</p>
+                        <a class="link" href="https://github.com/misszeferino/Power-BI-Projects/blob/64fa7c3b7773075f9cbec0ab7ff6e99407798b46/Project_1_%20Performance_des_Appels%20_Analyse_Financi%C3%A8re.md" target="_blank">Read More</a>
+                    </div>
+                    <!-- End Latest Products -->
+
+                    <!-- Latest Products -->
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <div class="margin-b-20">
+                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                                <img class="img-responsive" src="img/portfolio/ssis-2.jpg" alt="Latest Products Image" />
+                            </div>
+                        </div>
+                        <h4><a href="https://github.com/misszeferino/ETL-Projects/blob/636f2db85ec9fe6cff652f1a82bc650b503ba233/Project_1_ETL_Data_Warehouse_for_ServiceSpot.md" target="_blank">Data Warehouse for ServiceSpot</a> <span class="text-uppercase margin-l-20 portfolio_pill">SSIS</span></h4>
+                        <p>ETL project to load call center data into an enterprise data warehouse using SSIS.</p>
+                        <a class="link" href="https://github.com/misszeferino/ETL-Projects/blob/636f2db85ec9fe6cff652f1a82bc650b503ba233/Project_1_ETL_Data_Warehouse_for_ServiceSpot.md" target="_blank">Read More</a>
                     </div>
                     <!-- End Latest Products -->
 
