--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <!-- End Latest Products -->
 
                     <!-- Latest Products -->
-                    <div class="col-sm-4 sm-margin-b-50">
+                    <div class="col-sm-4 margin-b-50">
                         <div class="margin-b-20">
                             <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
                                 <img class="img-responsive" src="img/portfolio/ssis-2.jpg" alt="Latest Products Image" />
@@ -373,6 +373,34 @@
                         <h4><a href="https://github.com/misszeferino/ETL-Projects/blob/636f2db85ec9fe6cff652f1a82bc650b503ba233/Project_1_ETL_Data_Warehouse_for_ServiceSpot.md" target="_blank">Data Warehouse for ServiceSpot</a> <span class="text-uppercase margin-l-20 portfolio_pill">SSIS</span></h4>
                         <p>ETL project to load call center data into an enterprise data warehouse using SSIS.</p>
                         <a class="link" href="https://github.com/misszeferino/ETL-Projects/blob/636f2db85ec9fe6cff652f1a82bc650b503ba233/Project_1_ETL_Data_Warehouse_for_ServiceSpot.md" target="_blank">Read More</a>
+                    </div>
+                    <!-- End Latest Products -->
+
+                    <!-- Latest Products -->
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <div class="margin-b-20">
+                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                                <img class="img-responsive" src="img/portfolio/python-1.png" alt="Latest Products Image" />
+                            </div>
+                        </div>
+                        <h4><a href="https://github.com/misszeferino/NLP-Multilabel-Classification/blob/163bec1c6fcb7c99efe75e199e3fa929745baf5a/Multi-label%20Text%20Classification.pdf" target="_blank">Multi-label Text Classification</a>
+                            <span class="text-uppercase margin-l-20 portfolio_pill">Python</span></h4>
+                        <p>Automatic tag suggestion system for Stack Overflow using supervised and unsupervised learning.</p>
+                        <a class="link" href="https://github.com/misszeferino/NLP-Multilabel-Classification/blob/163bec1c6fcb7c99efe75e199e3fa929745baf5a/Multi-label%20Text%20Classification.pdf" target="_blank">Read More</a>
+                    </div>
+                    <!-- End Latest Products -->
+
+                    <!-- Latest Products -->
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <div class="margin-b-20">
+                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                                <img class="img-responsive" src="img/portfolio/api-2.png" alt="Latest Products Image" />
+                            </div>
+                        </div>
+                        <h4><a href="https://github.com/misszeferino/NLP-Multilabel-Classification/blob/3398c1a2a34349c054e920f7de933fe165fa0418/NLP%20Tag%20Suggestion%20API.md" target="_blank">API Deployment on AWS</a>
+                            <span class="text-uppercase margin-l-20 portfolio_pill">AWS</span><span class="text-uppercase margin-l-20 portfolio_pill">Python</span></h4>
+                        <p>Development and deployment of a prediction API on AWS.</p>
+                        <a class="link" href="https://github.com/misszeferino/NLP-Multilabel-Classification/blob/3398c1a2a34349c054e920f7de933fe165fa0418/NLP%20Tag%20Suggestion%20API.md" target="_blank">Read More</a>
                     </div>
                     <!-- End Latest Products -->
 
