--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="margin-b-5">                            
                                 <div class="margin-b-30">
                                     <h2>About Me</h2>
-                                    <p>Hi there! I'm Luciana, a Data Analyst currently part of Vulog's data team in the beautiful city of Nice, France.</p>
+                                    <p>Hi there! I'm Luciana, a Data Analyst currently part of Thales (CDI) Data Governance team in France.</p>
                                     <p>
                                         My journey in data analysis has been both challenging and rewarding, allowing me to develop strong skills in tools like Tableau, Power BI, SQL, and Python. I’ve had the opportunity to work on diverse projects that have sharpened my analytical abilities and fueled my passion for transforming complex data into actionable insights.
                                     </p>
