--- a/index.html
+++ b/index.html
@@ -267,18 +267,30 @@
                         <h2>Professional Experience</h2>
 
                         <div class="resume-item">
-                            <h4>Data Analyst <span class="text-uppercase margin-l-20">10/2022 - Present</span></h4>
+                            <h4>Data Analyst <span class="text-uppercase margin-l-20">05/2025 - Present</span></h4>
+                            <p><em>Thales, Gémenos, FR</em></p>
+                            <p><em>As part of the Data Governance team, I work on improving the quality, integrity, and usability of Master Data through strategic projects focused on governance and analytics.</em></p>
+                            <ul>
+                                <li> Analyzing business needs and translating them into data-driven solutions </li>
+                                <li> Designing dynamic and interactive dashboards with Power BI</li>
+                                <li> Optimizing data flows and transformation processes using SQL & Dataiku</li>
+                                <li> Implementing quality control plans and governance policies </li>
+                                <li> Supporting the evolution of the MDM Data Hub and developing GenAI-based assistance tools (OpenAI API)</li>                                
+                            </ul>
+                        </div>
+
+                        <div class="resume-item">
+                            <h4>Data Analyst <span class="text-uppercase margin-l-20">10/2022 - 05/2025</span></h4>
                             <p><em>Vulog, Nice, FR</em></p>
                             <p><em>Vulog is a global leader in shared mobility technology, providing solutions for car-sharing, scooter-sharing, and other fleet management services.</em></p>
                             <ul>
-                                <li> Data Visualization: Created dynamic dashboards in Tableau for B2B clients and internal teams, covering fleet performance, user behavior, marketing impact, geographic dynamics, revenue, and real-time operational metrics. </li>
-                                <li> Data Pipeline Automation: Built automated data preparation flows in Tableau Prep for data extraction and transformation, connecting to sources such as BigQuery, MySQL, and cloud platforms, improving data accessibility for analysis.</li>
-                                <li> Data Governance: Oversaw user access on Tableau Cloud and built a centralized data access point for secure data management, enforcing comprehensive data governance and streamlined access management.</li>
-                                <li> Cross-Team Collaboration: Managed support tickets and custom analysis requests, coordinating with cross-functional teams to address client needs and internal project requirements. </li>
-                                <li> Proactively explored data sources and tables, identifying and proposing impactful KPIs and analyses aligned with business goals.</li>
-                                <li> Documentation & Training: Documented analytical processes and created user guides detailing KPI calculations and dashboard utilization to provide transparent and actionable insights.</li>
+                                <li> Created dynamic dashboards in Tableau for B2B clients and internal teams, covering fleet performance, user behavior, marketing impact, geographic dynamics, revenue, and real-time operational metrics. </li>
+                                <li> Built automated data preparation flows in Tableau Prep for data extraction and transformation, improving data accessibility for analysis.</li>
+                                <li> Proactively explored data sources and tables, identifying and proposing KPIs and analyses aligned with business goals.</li>
+                                <li> Documented analytical processes and created user guides detailing KPI calculations and dashboard utilization to provide transparent and actionable insights.</li>
                             </ul>
                         </div>
+
                         <!-- End Resume Item -->
                     </div>
                 </div>
